--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.html
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.html
@@ -1,3 +1,3 @@
 <p>booking-process-page works!</p>
 
-<app-passengers-info-form [passengerFormGroup]="innerForm"></app-passengers-info-form>
+<app-passengers-info-form [passengerFormGroup]="passengersInfoFormGroup"></app-passengers-info-form>
