--- a/src/app/shared/components/passengers-info-form/passengers-info-form.component.scss
+++ b/src/app/shared/components/passengers-info-form/passengers-info-form.component.scss
@@ -1,13 +1,8 @@
 :host {
   width: 100%;
-  display: flex;
-  justify-content: center;
 }
 
-.form-container {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
+.container {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
@@ -117,23 +112,3 @@
   }
 }
 
-.number-content {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-
-.policy-container {
-  display: flex;
-  align-items: center;
-  font-size: 1.4rem;
-  font-weight: 500;
-}
-
-.policy-text {
-  margin: 0 !important;
-}
-
-.highlight {
-  color: var(--primary-color);
-}
