feat: add booking table component layout

--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.html
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.html
@@ -1,3 +1,1 @@
-<p>booking-process-page works!</p>
-
-<app-passengers-info-form [passengerFormGroup]="passengersInfoFormGroup"></app-passengers-info-form>
+<app-booking-table></app-booking-table>
