--- a/src/classes.scss
+++ b/src/classes.scss
@@ -44,6 +44,7 @@
   background-color: transparent;
   border: none;
   color: var(--primary-color);
+  font-weight: 500;
   display: flex;
   gap: 2rem
 }
