fix: fix validation in nested form

--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.html
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.html
@@ -1,1 +1,18 @@
+<div class="title-container">
+  <div class="title-content">
+    <span class="passengers-logo"></span>
+    <span class="passengers-title">Passengers</span>
+  </div>
+  <p class="passengers-description">
+    Enter the passenger's names as they appear on document (passport or ID).
+  </p>
+</div>
+
 <app-booking-table></app-booking-table>
+
+<app-booking-contact></app-booking-contact>
+
+<div class="btns-container">
+  <button class="ghost-btn">Back</button>
+  <button class="primary-btn">Continue</button>
+</div>
