feat: change style for assist container

--- a/src/app/shared/components/booking-table/booking-item/booking-item.component.html
+++ b/src/app/shared/components/booking-table/booking-item/booking-item.component.html
@@ -6,7 +6,7 @@
 
 <form class="container" [formGroup]="formGroup" ngNativeValidate>
   <app-passengers-info-form [passengerFormGroup]="passengerInfoFormGroup"></app-passengers-info-form>
-  <mat-slide-toggle formControlName="assist">
+  <mat-slide-toggle formControlName="assist" color="primary">
     <span class="assist-icon"></span>
     <span class="assist-text">Need special assistance?</span>
   </mat-slide-toggle>
