--- a/src/app/core/components/header/components/auth/components/register-form/register-form.component.html
+++ b/src/app/core/components/header/components/auth/components/register-form/register-form.component.html
@@ -146,7 +146,7 @@
   </mat-form-field>
 
   <div class="policy-container">
-    <mat-checkbox formControlName="isAgree"></mat-checkbox>
+    <mat-checkbox formControlName="isAgree" color="primary"></mat-checkbox>
     <p class="policy-text">
       I agree to Airway's
       <span class="highlight">Privacy Policy</span> and
