--- a/src/app/shared/components/booking-table/booking-contact/booking-contact.component.html
+++ b/src/app/shared/components/booking-table/booking-contact/booking-contact.component.html
@@ -1,1 +1,10 @@
-<p>booking-contact works!</p>
+<div class="contact-content">
+  <p class="contact-title">
+    <span class="contact-icon"></span>
+    <span class="contact-title">Contact details</span>
+  </p>
+
+  <p class="contact-description">
+    We need contact details to be able to deliver the latest information regarding your flight.
+  </p>
+</div>
