refactor: refactor booking-item

--- a/src/app/shared/components/booking-table/booking-contact/booking-contact.component.html
+++ b/src/app/shared/components/booking-table/booking-contact/booking-contact.component.html
@@ -8,3 +8,7 @@
     We need contact details to be able to deliver the latest information regarding your flight.
   </p>
 </div>
+
+<div class="contact-container">
+
+</div>
