refactor: major code refactoring

--- a/src/app/booking/components/booking-table/booking-contact/booking-contact.component.html
+++ b/src/app/booking/components/booking-table/booking-contact/booking-contact.component.html
@@ -10,5 +10,5 @@
 </div>
 
 <div class="contact-container">
-
+  <app-contact-form [contactFormGroup]="contactFormGroup"></app-contact-form>
 </div>
