--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.html
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.html
@@ -1,14 +1,15 @@
-<div class="title-container">
-  <div class="title-content">
-    <span class="passengers-logo"></span>
-    <span class="passengers-title">Passengers</span>
+<div class="container">
+  <div class="title-container">
+    <div class="title-content">
+      <span class="passengers-logo"></span>
+      <span class="passengers-title">Passengers</span>
+    </div>
+    <p class="passengers-description">
+      Enter the passenger's names as they appear on document (passport or ID).
+    </p>
   </div>
-  <p class="passengers-description">
-    Enter the passenger's names as they appear on document (passport or ID).
-  </p>
+  <app-booking-table></app-booking-table>
 </div>
-
-<app-booking-table></app-booking-table>
 
 <app-booking-contact></app-booking-contact>
 
