--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.scss
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.scss
@@ -4,6 +4,12 @@
   gap: 4rem;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
 .title-container {
   display: flex;
   flex-direction: column;
@@ -33,6 +39,7 @@
 }
 
 .passengers-description {
+  margin: 0;
   font-size: 1.6rem;
 }
 
