--- a/src/classes.scss
+++ b/src/classes.scss
@@ -85,3 +85,9 @@
     color: var(--error-color);
   }
 }
+
+// .form-container {
+//   display: flex;
+//   flex-direction: column;
+//   gap: 1.6rem;
+// }
