--- a/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
+++ b/src/app/core/components/header/components/auth/components/register-form/register-form.component.scss
@@ -36,28 +36,31 @@
   cursor: pointer;
 }
 
-::ng-deep {
-  .mat-mdc-form-field-subscript-wrapper {
-    display: none;
-  }
+.form-container {
+  ::ng-deep {
+    .mat-mdc-form-field-subscript-wrapper {
+      display: none;
+    }
 
-  .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-    background-color: var(--contrast-bg-color);
-  }
+    .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+      background-color: var(--contrast-bg-color);
+    }
 
-  .mdc-text-field--invalid:not(.mdc-text-field--disabled) .mdc-line-ripple::before,
-  .mdc-text-field--invalid:not(.mdc-text-field--disabled) .mdc-line-ripple::after,
-  .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple::before,
-  .mat-mdc-form-field:not(.mat-form-field-no-animations) .mdc-line-ripple::after {
-    border-bottom: none;
-  }
+    .mdc-text-field--invalid:not(.mdc-text-field--disabled) .mdc-line-ripple::before,
+    .mdc-text-field--invalid:not(.mdc-text-field--disabled) .mdc-line-ripple::after,
+    .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple::before,
+    .mat-mdc-form-field:not(.mat-form-field-no-animations) .mdc-line-ripple::after {
+      border-bottom: none;
+    }
 
-  .mat-mdc-menu-content {
-    max-width: 16rem;
-    line-height: 1.2rem;
-    padding: 0.5rem !important;
+    .mat-mdc-menu-content {
+      max-width: 16rem;
+      line-height: 1.2rem;
+      padding: 0.5rem !important;
+    }
   }
 }
+
 
 .gender-container {
   width: 100%;
