--- a/src/app/shared/components/contact-form/contact-form.component.scss
+++ b/src/app/shared/components/contact-form/contact-form.component.scss
@@ -61,10 +61,11 @@
 .number-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 0.8rem;
+  gap: 1.5rem;
 
   @media screen and (max-width: 650px) {
     grid-template-columns: 1fr;
+    width: 100%;
   }
 }
 
