feat: implement shared contact form in the register form container

--- a/src/app/booking/components/booking-table/booking-item/booking-item.component.html
+++ b/src/app/booking/components/booking-table/booking-item/booking-item.component.html
@@ -3,6 +3,9 @@
   <span class="title">Adult</span>
 </p>
 
-<app-passengers-info-form [personalFormGroup]="passengerInfoFormGroup" class="personal-form"></app-passengers-info-form>
+<app-passengers-info-form
+  [personalFormGroup]="passengerInfoFormGroup"
+  class="personal-form">
+</app-passengers-info-form>
 
 
