refactor: add trackBy function for ngFor derictives

--- a/src/app/core/components/header/components/breadcrumps/breadcrumps.component.html
+++ b/src/app/core/components/header/components/breadcrumps/breadcrumps.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isBookingPage; else mainPage">
   <ul class="breadcrumbs-list">
-    <li class="breadcrumb" clas="" *ngFor="let breadcrumb of breadcrumbs, let i = index">
+    <li class="breadcrumb" clas="" *ngFor="let breadcrumb of breadcrumbs, let i = index; trackBy: trackByFn">
       <span
         class="icon"
         [ngClass]="{'active': breadcrumb.isActive, 'done': breadcrumb.isDone}">
