--- a/src/app/core/components/auth/auth.component.scss
+++ b/src/app/core/components/auth/auth.component.scss
@@ -2,7 +2,7 @@
   display: inline-flex;
   width: 1.4rem;
   height: 1.5rem;
-  background-image: url(../../../../../../assets/auth_logo_light.svg);
+  background-image: url(../../../../assets/auth_logo_light.svg);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -44,13 +44,13 @@
 .close {
   width: 1.4rem;
   height: 1.4rem;
-  background-image: url(../../../../../../assets/close-icon.svg);
+  background-image: url(../../../../../assets/close-icon.svg);
   background-repeat: no-repeat;
   background-size: contain;
   cursor: pointer;
 
   &:hover {
-    background-image: url(../../../../../../assets/close-icon_hover.svg);
+    background-image: url(../../../../../assets/close-icon_hover.svg);
     scale: (1.2);
   }
 }
@@ -148,7 +148,7 @@
       border-color: var(--auxiliary-color);
     }
       .logo {
-        background-image: url(../../../../../../assets/auth_logo_dark.svg) !important;
+        background-image: url(../../../../../assets/auth_logo_dark.svg) !important;
       }
       .user-state-title {
         color: var(--main-color);
