--- a/src/app/core/components/header/components/profile/profile.component.html
+++ b/src/app/core/components/header/components/profile/profile.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="formDate" class="form-container">
   <button class="select-btn select-btn__dark">
     <mat-select [formControl]="dateControl" name="date">
-      <mat-option *ngFor="let dateFormat of dateFormats" [value]="dateFormat.value">
+      <mat-option *ngFor="let dateFormat of dateFormats; trackBy: trackByFn" [value]="dateFormat.value">
         {{dateFormat.viewValue}}
       </mat-option>
     </mat-select>
@@ -9,7 +9,7 @@
 
   <button class="select-btn select-btn__small select-btn__dark">
     <mat-select [formControl]="currencyControl" name="currency">
-      <mat-option *ngFor="let currencyFormat of currencyFormats" [value]="currencyFormat.value"
+      <mat-option *ngFor="let currencyFormat of currencyFormats; trackBy: trackByFn" [value]="currencyFormat.value"
       class="option">
         {{currencyFormat.viewValue}}
       </mat-option>
