--- a/src/app/core/components/auth/components/register-form/register-form.component.scss
+++ b/src/app/core/components/auth/components/register-form/register-form.component.scss
@@ -96,7 +96,7 @@
   width: 1.2rem;
   height: 0.9rem;
   display: inline-flex;
-  background-image: url(../../../../../../../../assets/select_icon.svg);
+  background-image: url(../../../../../../assets/select_icon.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
