--- a/src/app/booking/components/booking-contact/booking-contact.component.scss
+++ b/src/app/booking/components/booking-contact/booking-contact.component.scss
@@ -50,8 +50,21 @@
   box-shadow: 0px 1px 4px var(--box-shadow);
   border-radius: 0.8rem;
 
+  @media screen and (max-width: 850px) {
+    gap: 2rem;
+  }
+
   @media screen and (max-width: 650px) {
+    padding: 1.5rem 2.2rem;
+  }
+
+  @media screen and (max-width: 800px) {
     flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  @media screen and (max-width: 450px) {
+    padding: 1.5rem;
   }
 }
 
@@ -62,7 +75,7 @@
   flex-direction: column;
   gap: 1.5rem;
 
-  @media screen and (max-width: 650px) {
+  @media screen and (max-width: 800px) {
     max-width: none
   }
 }
