--- a/src/app/booking/components/booking-table/booking-item/booking-item.component.scss
+++ b/src/app/booking/components/booking-table/booking-item/booking-item.component.scss
@@ -9,7 +9,16 @@
 .personal-form {
   ::ng-deep {
     form.container {
-    flex-direction: row;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+
+      @media screen and (max-width: 1100px) {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      @media screen and (max-width: 650px) {
+        grid-template-columns: 1fr;
+      }
   }}
 }
 
