--- a/src/app/booking/components/booking-table/booking-table.component.html
+++ b/src/app/booking/components/booking-table/booking-table.component.html
@@ -3,10 +3,7 @@
     <li *ngFor="let item of items; trackBy: trackByFn">
       <div class="container">
         <app-booking-item></app-booking-item>
-        <mat-slide-toggle color="primary" [ngClass]="{'invisible': item === 'infants'}">
-          <span class="assist-icon"></span>
-          <span class="assist-text">Need special assistance?</span>
-        </mat-slide-toggle>
+        <app-booking-additional-info [ngClass]="{'invisible': item === 'infants'}"></app-booking-additional-info>
       </div>
     </li>
   </ul>
