--- a/src/app/core/components/auth/auth.component.scss
+++ b/src/app/core/components/auth/auth.component.scss
@@ -50,7 +50,7 @@
   cursor: pointer;
 
   &:hover {
-    background-image: url(../../../../../assets/close-icon_hover.svg);
+    background-image: url(../../../../assets/close-icon_hover.svg);
     scale: (1.2);
   }
 }
@@ -148,7 +148,7 @@
       border-color: var(--auxiliary-color);
     }
       .logo {
-        background-image: url(../../../../../assets/auth_logo_dark.svg) !important;
+        background-image: url(../../../../assets/auth_logo_dark.svg) !important;
       }
       .user-state-title {
         color: var(--main-color);
