feat: add submit button validation

--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.html
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.html
@@ -15,5 +15,5 @@
 
 <div class="btns-container">
   <button class="ghost-btn" (click)="navToFlights()">Back</button>
-  <button class="primary-btn" [disabled]="true">Continue</button>
+  <button class="primary-btn" [disabled]="isAllFormsValid">Continue</button>
 </div>
