--- a/src/app/booking/components/booking-table/booking-additional-info/booking-additional-info.component.html
+++ b/src/app/booking/components/booking-table/booking-additional-info/booking-additional-info.component.html
@@ -1,37 +1,38 @@
-<mat-slide-toggle class="container" color="primary">
-  <span class="icon assist-icon"></span>
-  <span class="description">Need special assistance?</span>
-</mat-slide-toggle>
+<form [formGroup]="additionalInfoForm" class="add-info-container">
+  <mat-slide-toggle class="container" color="primary" formControlName="assistance">
+    <span class="icon assist-icon"></span>
+    <span class="description">Need special assistance?</span>
+  </mat-slide-toggle>
 
+  <div class="baggage-content">
+    <p class="container">
+      <span class="icon baggage-icon"></span>
+      <span class="description">Additional baggage</span>
+    </p>
 
-<div class="baggage-content">
-  <p class="container">
-    <span class="icon baggage-icon"></span>
-    <span class="description">Additional baggage</span>
-  </p>
-
-  <mat-form-field class="baggage-input">
-    <button
-      mat-button
-      mat-icon-button
-      matPrefix
-      aria-label="Remove"
-      (click)="decrement()"
-      [disabled]="shouldDisableDecrement()"
-    >
-      <mat-icon>remove</mat-icon>
-    </button>
-    <input matInput type="number" [formControl]="baggage" />
-    <button
-      mat-button
-      mat-icon-button
-      matSuffix
-      aria-label="Add"
-      (click)="increment()"
-      [disabled]="shouldDisableIncrement()"
-    >
-      <mat-icon>add</mat-icon>
-    </button>
-  </mat-form-field>
-</div>
+    <mat-form-field class="baggage-input">
+      <button
+        mat-button
+        mat-icon-button
+        matPrefix
+        aria-label="Remove"
+        (click)="decrement()"
+        [disabled]="shouldDisableDecrement()"
+      >
+        <mat-icon>remove</mat-icon>
+      </button>
+      <input matInput type="number" formControlName="baggage" />
+      <button
+        mat-button
+        mat-icon-button
+        matSuffix
+        aria-label="Add"
+        (click)="increment()"
+        [disabled]="shouldDisableIncrement()"
+      >
+        <mat-icon>add</mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
+</form>
 
