--- a/src/app/shared/components/passengers-info-form/personal-info-form.component.scss
+++ b/src/app/shared/components/passengers-info-form/personal-info-form.component.scss
@@ -53,12 +53,14 @@
     .mat-mdc-form-field:not(.mat-form-field-no-animations) .mdc-line-ripple::after {
       border-bottom: none;
     }
+  }
+}
 
-    .mat-mdc-menu-content {
-      max-width: 16rem;
-      line-height: 1.2rem;
-      padding: 0.5rem !important;
-    }
+::ng-deep {
+  .mat-mdc-menu-content {
+    max-width: 16rem;
+    line-height: 1.2rem;
+    padding: 0.5rem !important;
   }
 }
 
