--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
@@ -1,9 +1,20 @@
 <div class="info-panel">
-  <div class="info-block">
-    <p>{{bookingInfo?.departureCity}}</p>
+  <div class="cities">
+    <span>{{departureCity}}</span>
+    <button class="toggle-btn"><img src="../../.././../assets/toggle-trip-way-btn.svg" alt="Change direction"></button>
+    <span>{{destinationCity}}</span>
   </div>
+  <div class="dates-n-passengers">
+    <span class="dotted">{{ bookingInfo?.roundTrip ? 'Two-way' : 'One-way' }}</span>
+    <span class="dotted">{{ departureDate | date: 'dd MMM' }} - {{ destinationDate | date: 'dd MMM' }}</span>
+    <div>
+      <span> {{ passengersNumber }} </span>
+      <img src="../../.././../assets/passenger-icon.svg" alt="passengers">
+    </div>
+  </div>
+  <button class="ghost-btn">Edit</button>
 </div>
-<button class="ghost-btn">Edit</button>
+
 <form [formGroup]="form">
 
 </form>
