--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,9 +1,10 @@
 :root {
   --base-size: 10px;
   --box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2); // тень для блоков, активных элементов
+  --bottom-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2); //тень только снизу блока
 
   // colors:
-  --bg-main-color: #CCCCCC;
+  --bg-main-color: #F4F6F9;
   --main-color: #1C1B1F; //основной цвет шрифта
   --contrast-color: #FFFFFF; // контрастный цвет шрифта для элементов с темным фоном (хэдэр, кнопки...)
   --primary-color: #11397E; // основной акцентный цвет - заголовки, фон кнопок, переключателей, date-picker.
@@ -11,6 +12,7 @@
   --auxiliary-color: #74767A; // цвет для вспомогательных элементов (breadcrmps, labels и т.д.)
   --accent-bg-color: #FFFFFF; // цвет фона для попапов, диалоговых окон, всплывашек, форм
   --error-color: #B3261E; // цвет сообщений об ошибках (валидация)
+  --bg-neutral: #F4F6F9;
 
   --auxiliary-color-opacity02: #74767a33; // использован как фон хедера
   --neutral-color-90: #f1f3f626; // использован как цвет кнопок хедера
