--- a/src/app/core/components/auth/auth.component.scss
+++ b/src/app/core/components/auth/auth.component.scss
@@ -44,13 +44,13 @@
 .close {
   width: 1.4rem;
   height: 1.4rem;
-  background-image: url(../../../../../assets/close-icon.svg);
+  background-image: url('/assets/close-icon.svg');
   background-repeat: no-repeat;
   background-size: contain;
   cursor: pointer;
 
   &:hover {
-    background-image: url(../../../../assets/close-icon_hover.svg);
+    background-image: url('/assets/close-icon_hover.svg');
     scale: (1.2);
   }
 }
