--- a/src/app/core/components/auth/components/social-media-form/social-media-form.component.scss
+++ b/src/app/core/components/auth/components/social-media-form/social-media-form.component.scss
@@ -24,9 +24,9 @@
 }
 
 .google-icon {
-  background-image: url(../../../../../../assets/google.svg);
+  background-image: url('/assets/google.svg');
 }
 
 .facebook-icon {
-  background-image: url(../../../../../../assets/facebook.svg);
+  background-image: url('/assets/facebook.svg');
 }
