fix: fix paths to img in scss files

--- a/src/app/booking/components/booking-table/booking-additional-info/booking-additional-info.component.scss
+++ b/src/app/booking/components/booking-table/booking-additional-info/booking-additional-info.component.scss
@@ -40,11 +40,11 @@
 }
 
 .assist-icon {
-  background-image: url(../../../../../assets/assistance.svg);
+  background-image: url('/assets/assistance.svg');
 }
 
 .baggage-icon {
-  background-image: url(../../../../../assets/buggage_icon.svg);
+  background-image: url('/assets/buggage_icon.svg');
 }
 
 .description {
