--- a/src/app/booking/components/booking-contact/booking-contact.component.scss
+++ b/src/app/booking/components/booking-contact/booking-contact.component.scss
@@ -20,7 +20,7 @@
   width: 1.6rem;
   height: 2rem;
   display: inline-flex;
-  background-image: url(../../../../assets/contact_icon.svg);
+  background-image: url('/assets/contact_icon.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
