--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.scss
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.scss
@@ -26,7 +26,7 @@
   width: 2.4rem;
   height: 2.4rem;
   display: inline-flex;
-  background-image: url(../../../../assets/pass-logo.svg);
+  background-image: url('/assets/pass-logo.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
