--- a/src/app/core/components/header/components/breadcrumps/breadcrumps.component.scss
+++ b/src/app/core/components/header/components/breadcrumps/breadcrumps.component.scss
@@ -32,7 +32,7 @@
   justify-content: center;
   width: 1.7rem;
   height: 1.6rem;
-  background-image: url(../../../../../../assets/step-bg.svg);
+  background-image: url('/assets/step-bg.svg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -48,11 +48,11 @@
 }
 
 .active {
-  background-image: url(../../../../../../assets/step-active.svg);
+  background-image: url('/assets/step-active.svg');
 }
 
 .done {
-  background-image: url(../../../../../../assets/step-done.svg);
+  background-image: url('/assets/step-done.svg');
 }
 
 .breadcrumps-plug {
