refactor: rename components

--- a/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
+++ b/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
@@ -5,7 +5,7 @@
 
 <app-passengers-info-form
   [personalFormGroup]="passengerInfoFormGroup"
-  class="personal-form">
+  class="passenger-form">
 </app-passengers-info-form>
 
 
