--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.html
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.html
@@ -8,7 +8,7 @@
       Enter the passenger's names as they appear on document (passport or ID).
     </p>
   </div>
-  <app-booking-table></app-booking-table>
+  <app-passengers-list></app-passengers-list>
 </div>
 
 <app-booking-contact></app-booking-contact>
