feat: get info about passengers from booking service

--- a/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
+++ b/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
@@ -1,6 +1,6 @@
 <p class="passenger-title">
-  <span class="count">1.</span>
-  <span class="title">Adult</span>
+  <span class="count">{{index}}.</span>
+  <span class="title">{{passenger}}</span>
 </p>
 
 <app-passengers-info-form
