--- a/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
+++ b/src/app/booking/components/passengers-list/passenger-item/passenger-item.component.html
@@ -1,11 +1,60 @@
 <p class="passenger-title">
-  <span class="count">{{index}}.</span>
+  <span class="count">{{index}}. </span>
   <span class="title">{{passenger}}</span>
 </p>
 
-<app-passengers-info-form
-  [personalFormGroup]="passengerInfoFormGroup"
-  class="passenger-form">
-</app-passengers-info-form>
+<form [formGroup]="passengerFormGroup" class="form-container">
+
+  <app-passengers-info-form
+    [personalFormGroup]="passengersInfo"
+    class="passenger-form">
+  </app-passengers-info-form>
+
+  <div class="add-info-container" [ngClass]="{'invisible': passenger === 'infant'}">
+    <mat-slide-toggle class="container-title" color="primary" formControlName="specialAssistance">
+      <span class="icon assist-icon"></span>
+      <span class="description">Need special assistance?</span>
+    </mat-slide-toggle>
+
+    <div class="container">
+      <div class="baggage-content">
+        <p class="container-title">
+          <span class="icon baggage-icon"></span>
+          <span class="description">Additional baggage</span>
+        </p>
+
+        <mat-form-field class="baggage-input">
+          <button
+            mat-button
+            mat-icon-button
+            matPrefix
+            aria-label="Remove"
+            (click)="decrement()"
+            [disabled]="shouldDisableDecrement()"
+          >
+            <mat-icon>remove</mat-icon>
+          </button>
+          <input matInput type="number" formControlName="luggage" />
+          <button
+            mat-button
+            mat-icon-button
+            matSuffix
+            aria-label="Add"
+            (click)="increment() "
+            [disabled]="shouldDisableIncrement()"
+          >
+            <mat-icon>add</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+
+      <p class="error-baggage" [ngClass]="{'invisible': !isLuggageError}">
+        You can't add more than 2 luggage items per person
+      </p>
+    </div>
+
+  </div>
+
+</form>
 
 
