--- a/src/app/booking/components/passengers-list/passengers-list.component.html
+++ b/src/app/booking/components/passengers-list/passengers-list.component.html
@@ -3,7 +3,7 @@
     <li *ngFor="let item of items; let i = index; trackBy: trackByFn">
       <div class="container">
         <app-passenger-item [index]="i + 1" [passenger]="item"></app-passenger-item>
-        <app-passenger-additional-info [ngClass]="{'invisible': item === 'infants'}"></app-passenger-additional-info>
+        <!-- <app-passenger-additional-info [index]="i + 1" [passenger]="item" [ngClass]="{'invisible': item === 'infant'}"></app-passenger-additional-info> -->
       </div>
     </li>
   </ul>
