--- a/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
+++ b/src/app/booking/components/booking-settings-panel/booking-settings-panel.component.html
@@ -1,21 +1,28 @@
-<div class="info-panel">
-  <div class="cities">
-    <span>{{ bookingInfo?.departureAirport | airportToCity }}</span>
-    <button class="toggle-btn"><img src="/assets/toggle-trip-way-btn.svg" alt="Change direction"></button>
-    <span>{{ bookingInfo?.destinationAirport | airportToCity }}</span>
-  </div>
-  <div class="dates-n-passengers">
-    <span class="dotted">{{ bookingInfo?.roundTrip ? 'Two-way' : 'One-way' }}</span>
-    <span class="dotted">{{ bookingInfo?.departureDate | date: 'dd MMM' }} - {{ bookingInfo?.returnDate | date: 'dd MMM' }}</span>
-    <div>
-      <span> {{ getPassengersNumber() }} </span>
-      <img src="/assets/passenger-icon.svg" alt="passengers">
+<div class="search-panel">
+  <div class="search-panel_info" *ngIf="bookingInfo; else noInfo">
+    <div class="cities">
+      <span>{{ bookingInfo.departureAirport | airportToCity }}</span>
+      <button class="toggle-btn"><img src="/assets/toggle-trip-way-btn.svg" alt="Change direction"></button>
+      <span>{{ bookingInfo.destinationAirport | airportToCity }}</span>
+    </div>
+    <div class="dates-n-passengers">
+      <span class="dotted">{{ bookingInfo.roundTrip ? 'Two-way' : 'One-way' }}</span>
+      <span class="dotted">{{ bookingInfo.departureDate | date: 'dd MMM' }} - {{ bookingInfo.returnDate | date: 'dd MMM' }}</span>
+      <div>
+        <span> {{ getPassengersNumber() }} </span>
+        <img src="/assets/passenger-icon.svg" alt="passengers">
+      </div>
     </div>
   </div>
-  <button class="ghost-btn">Edit</button>
+  <ng-template #noInfo>Please edit search parameters</ng-template>
+
+  <button class="ghost-btn" *ngIf="editMode; else edit" (click)="setNewSearch()">Confirm</button>
+  <ng-template #edit>
+    <button class="ghost-btn" (click)="setToEditMode()">Edit</button>
+  </ng-template>
 </div>
 
-<form [formGroup]="form" class="settings-form">
+<form [formGroup]="form" class="settings-form" *ngIf="editMode">
   <mat-form-field class="input-container" appearance="fill">
     <mat-label>From</mat-label>
     <input type="text"
@@ -53,14 +60,14 @@
   <mat-form-field appearance="fill">
     <mat-label>Dates</mat-label>
     <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-      <input matStartDate formControlName="destinationDate" placeholder="Start date">
-      <input matEndDate formControlName="departureDate" placeholder="End date">
+      <input matStartDate formControlName="departureDate" placeholder="Start date">
+      <input matEndDate formControlName="destinationDate" placeholder="End date">
     </mat-date-range-input>
     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker></mat-date-range-picker>
+    <mat-date-range-picker #picker color="primary"></mat-date-range-picker>
   
-    <!-- <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error> -->
+    <mat-error *ngIf="range.controls['departureDate'].hasError('matStartDateInvalid')">Invalid start date</mat-error>
+    <mat-error *ngIf="range.controls['destinationDate'].hasError('matEndDateInvalid')">Invalid end date</mat-error>
   </mat-form-field>
 
 </form>
