feat: add component with flight info

--- a/src/app/booking/pages/booking-process-page/booking-process-page.component.html
+++ b/src/app/booking/pages/booking-process-page/booking-process-page.component.html
@@ -2,7 +2,7 @@
   <div class="title-container">
     <div class="title-content">
       <span class="passengers-logo"></span>
-      <span class="passengers-title">Passengers</span>
+      <span class="passengers-title title">Passengers</span>
     </div>
     <p class="passengers-description">
       Enter the passenger's names as they appear on document (passport or ID).
